[gd_scene load_steps=7 format=3 uid="uid://clllwsuil2nv1"]

[ext_resource type="Script" path="res://Scripts/gamma.gd" id="1_p5ybc"]
[ext_resource type="Texture2D" uid="uid://b226ui1rg8pr" path="res://Assets/Tanks/tankBeige_outline.png" id="2_b6qoy"]
[ext_resource type="Texture2D" uid="uid://c20qse2j7eho8" path="res://Assets/Tanks/barrelBeige_outline.png" id="3_x6lh6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hhkfi"]
size = Vector2(81, 78)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nsd0s"]
size = Vector2(95, 86)

[sub_resource type="CircleShape2D" id="CircleShape2D_0dki6"]
radius = 303.015

[node name="Gamma" type="CharacterBody2D"]
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_p5ybc")
metadata/_edit_vertical_guides_ = [48.0]
metadata/_edit_horizontal_guides_ = [0.0]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_hhkfi")

[node name="Body" type="Sprite2D" parent="."]
rotation = 3.14159
texture = ExtResource("2_b6qoy")

[node name="Barrel" type="Sprite2D" parent="."]
texture = ExtResource("3_x6lh6")
centered = false
offset = Vector2(-12, -12)

[node name="BulletSpawn" type="Marker2D" parent="Barrel"]
position = Vector2(56, 0)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
debug_enabled = true

[node name="HitBox" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(2.5, 0)
shape = SubResource("RectangleShape2D_nsd0s")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = -30.0
offset_top = -65.0
offset_right = 37.0
offset_bottom = -41.0
text = "gamma"

[node name="ScaredArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScaredArea"]
shape = SubResource("CircleShape2D_0dki6")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="body_entered" from="ScaredArea" to="." method="_on_scared_area_body_entered"]
[connection signal="body_exited" from="ScaredArea" to="." method="_on_scared_area_body_exited"]
